removed CONFIG_MUTEK_PRINTK_RATE

--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -52,3 +52,10 @@
   function stm32_freq_scaling_init
 %init end
 
+%config CONFIG_STM32_PRINTK_RATE
+  desc Baudrate used for STM32 early console
+  parent CONFIG_ARCH_EFM32
+  default 115200
+  flags value
+%config end
+
