efm32: added usart printk, moved printk implementations in leuart and usart drivers

--- a/arch/efm32/drivers/leuart/Makefile
+++ b/arch/efm32/drivers/leuart/Makefile
@@ -1,3 +1,2 @@
-
-objs = leuart.o
-
+objs-$(CONFIG_DRIVER_EFM32_LEUART_CHAR) += leuart_char.o
+objs-$(CONFIG_DRIVER_EFM32_LEUART_PRINTK) += leuart_printk.o
