--- a/arch/efm32/drivers/leuart/leuart.config
+++ b/arch/efm32/drivers/leuart/leuart.config
@@ -2,15 +2,49 @@
 %config CONFIG_DRIVER_EFM32_LEUART
   desc Enable EFM32 Low Energy UART driver
   parent CONFIG_ARCH_EFM32
+%config end
+
+%config CONFIG_DRIVER_EFM32_LEUART_CHAR
+  desc Enable EFM32 Low Energy UART char driver
+  parent CONFIG_DRIVER_EFM32_LEUART
   depend CONFIG_DEVICE_CHAR
   depend CONFIG_DEVICE_IOMUX
   suggest CONFIG_DEVICE_IRQ
+  default defined
 %config end
 
 %config CONFIG_DRIVER_EFM32_LEUART_SWFIFO
   desc Size of the additional software FIFOs. 0 disables software FIFOs.
-  parent CONFIG_DRIVER_CHAR_CADENCE_UART
+  parent CONFIG_DRIVER_EFM32_LEUART_CHAR
   flags value
   default 0
 %config end
 
+%config CONFIG_DRIVER_EFM32_LEUART_PRINTK
+  desc Enable EFM32 Low Energy UART printk handler
+  parent CONFIG_DRIVER_EFM32_LEUART
+  depend CONFIG_MUTEK_PRINTK
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_DRIVER_EFM32_LEUART_PRINTK_PIN
+  require CONFIG_DRIVER_EFM32_LEUART_PRINTK_LOC
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40084000
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x40084400
+%config end
+
+%config CONFIG_DRIVER_EFM32_LEUART_PRINTK_PIN
+  desc Specify EFM32 Low Energy UART pin used for printk TX
+  parent CONFIG_DRIVER_EFM32_LEUART_PRINTK
+  flags value
+%config end
+
+%config CONFIG_DRIVER_EFM32_LEUART_PRINTK_LOC
+  desc Specify EFM32 Low Energy UART location for printk
+  parent CONFIG_DRIVER_EFM32_LEUART_PRINTK
+  flags value
+%config end
+
+%init INIT_DRIVER_EFM32_LEUART_PRINTK
+  parent CONFIG_DRIVER_EFM32_LEUART_PRINTK
+  during INIT_MUTEK_PRINTK
+  function efm32_leuart_printk_init
+%init end
