--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -5,10 +5,18 @@
   depend CONFIG_DEVICE_IOMUX
 %config end
 
+%config CONFIG_DRIVER_EFM32_USART_RATE
+  desc Specify EFM32 USART default char baud rate
+  parent CONFIG_DRIVER_EFM32_USART
+  flags value
+  default 115200
+%config end
+
 %config CONFIG_DRIVER_EFM32_USART_CHAR
   desc Enable EFM32 USART char class driver
   parent CONFIG_DRIVER_EFM32_USART
   depend CONFIG_DEVICE_CHAR
+  require CONFIG_DRIVER_EFM32_USART_RATE
   suggest CONFIG_DEVICE_IRQ
   default defined
 %config end
@@ -41,3 +49,37 @@
   flags value
   default 2
 %config end
+
+%config CONFIG_DRIVER_EFM32_USART_PRINTK
+  desc Enable EFM32 USART printk handler
+  parent CONFIG_DRIVER_EFM32_USART
+  depend CONFIG_MUTEK_PRINTK
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+  require CONFIG_DRIVER_EFM32_USART_PRINTK_PIN
+  require CONFIG_DRIVER_EFM32_USART_PRINTK_LOC
+  require CONFIG_DRIVER_EFM32_USART_RATE
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000e000
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000e400
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c000
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c400
+  when CONFIG_MUTEK_PRINTK CONFIG_MUTEK_PRINTK_ADDR=0x4000c800
+%config end
+
+%config CONFIG_DRIVER_EFM32_USART_PRINTK_PIN
+  desc Specify EFM32 USART pin used for printk TX
+  parent CONFIG_DRIVER_EFM32_USART_PRINTK
+  flags value
+%config end
+
+%config CONFIG_DRIVER_EFM32_USART_PRINTK_LOC
+  desc Specify EFM32 USART location for printk
+  parent CONFIG_DRIVER_EFM32_USART_PRINTK
+  flags value
+%config end
+
+%init INIT_DRIVER_EFM32_USART_PRINTK
+  parent CONFIG_DRIVER_EFM32_USART_PRINTK
+  during INIT_MUTEK_PRINTK
+  function efm32_usart_printk_init
+%init end
+
