--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -58,70 +58,35 @@
 %config CONFIG_EFM32_G8XX_STK
   desc Efm32 support for G8xx gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_PRINTK_HANDLER
-  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_GECKO
 %config end
-
-%init INIT_EFM32_PRINTK_LEUART_G8XX_STK
-  parent CONFIG_EFM32_G8XX_STK
-  during INIT_MUTEK_PRINTK
-  function efm32_early_console_leuart_init
-%init end
 
 %config CONFIG_EFM32_STK3200
   desc Efm32 support for STK3200 zero gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_PRINTK_HANDLER
-  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_ZERO_GECKO
 %config end
-
-%init INIT_EFM32_PRINTK_LEUART_STK3200
-  parent CONFIG_EFM32_STK3200
-  during INIT_MUTEK_PRINTK
-  function efm32_early_console_leuart_init
-%init end
 
 %config CONFIG_EFM32_STK3600
   desc Efm32 support for STK3600 leopard gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_PRINTK_HANDLER
-  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_LEOPARD_GECKO
 %config end
-
-%init INIT_EFM32_PRINTK_LEUART_STK3600
-  parent CONFIG_EFM32_STK3600
-  during INIT_MUTEK_PRINTK
-  function efm32_early_console_leuart_init
-%init end
 
 %config CONFIG_EFM32_STK3800
   desc Efm32 support for STK3800 Wonder gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_PRINTK_HANDLER
-  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_WONDER_GECKO
 %config end
-
-%init INIT_EFM32_PRINTK_LEUART_STK3800
-  parent CONFIG_EFM32_STK3800
-  during INIT_MUTEK_PRINTK
-  function efm32_early_console_leuart_init
-%init end
 
 %config CONFIG_EFM32_STK3700
   desc Efm32 support for STK3700 Giant gecko starter kit
   parent CONFIG_ARCH_EFM32
-  provide CONFIG_MUTEK_PRINTK_HANDLER
-  require CONFIG_MUTEK_PRINTK_ADDR
   depend CONFIG_EFM32_GIANT_GECKO
 %config end
 
-%init INIT_EFM32_PRINTK_LEUART_STK3700
-  parent CONFIG_EFM32_STK3700
-  during INIT_MUTEK_PRINTK
-  function efm32_early_console_leuart_init
-%init end
+%config CONFIG_EFM32_STK_BC_EN
+  desc Enable board controller on STK dev boards
+  parent CONFIG_ARCH_EFM32
+%config end
 
