efm32: wait for pushbutton release on startup

--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -20,6 +20,25 @@
   flags value
 %config end
 
+%config CONFIG_EFM32_BOOT_BUTTON
+  desc Wait for pushbutton release on startup
+  parent CONFIG_ARCH_EFM32
+  require CONFIG_EFM32_BOOT_BUTTON_PIN
+%config end
+
+%config CONFIG_EFM32_BOOT_BUTTON_PIN
+  desc Sepcify pin index of the push button
+  flags value
+  parent CONFIG_EFM32_BOOT_BUTTON
+%config end
+
+%init INIT_EFM32_BOOT_BUTTON
+  parent CONFIG_EFM32_BOOT_BUTTON
+  during INIT_BOOTSTRAP
+  before INIT_DEVICE
+  function efm32_boot_button_wait
+%init end
+
 %config CONFIG_EFM32_GECKO
   desc Support for EFM32 Gecko family of microcontrollers
   parent CONFIG_ARCH_EFM32
