fixed printk config tokens

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -183,8 +183,8 @@
 
 %config CONFIG_MUTEK_PRINTK_HANDLER
   desc An implementation for printk output exists
-  parent CONFIG_MUTEK
-  flags meta
+  parent CONFIG_MUTEK_PRINTK
+  flags meta single
 %config end
 
 %config CONFIG_MUTEK_PRINTK_HEXDUMP
@@ -201,7 +201,7 @@
 
 %config CONFIG_MUTEK_PRINTK_ADDR
   desc Address of the device used for console output
-  parent CONFIG_MUTEK_CONSOLE
+  parent CONFIG_MUTEK_PRINTK
   default 0
   flags value
 %config end
