arc4: added support for random mode of operation

--- a/drivers/crypto/soft_arc4/arc4.config
+++ b/drivers/crypto/soft_arc4/arc4.config
@@ -6,3 +6,15 @@
   suggest CONFIG_DEVICE_DELAYED_REQUEST
 %config end
 
+%config CONFIG_DRIVER_CRYPTO_SOFT_ARC4_STREAM
+  desc Enable support for stream cipher mode of operation
+  parent CONFIG_DRIVER_CRYPTO_SOFT_ARC4
+  default defined
+%config end
+
+%config CONFIG_DRIVER_CRYPTO_SOFT_ARC4_RANDOM
+  desc Enable support for pseudo random generator mode of operation
+  parent CONFIG_DRIVER_CRYPTO_SOFT_ARC4
+  default defined
+%config end
+
