--- a/drivers/crypto/Makefile
+++ b/drivers/crypto/Makefile
@@ -1,6 +1,7 @@
 
 subdirs-$(CONFIG_DRIVER_CRYPTO_SOFT_ARC4) += soft_arc4
 subdirs-$(CONFIG_DRIVER_CRYPTO_SOFT_AES) += soft_aes
+subdirs-$(CONFIG_DRIVER_CRYPTO_SOFT_SALSA) += soft_salsa
 
 subdirs-$(CONFIG_DRIVER_CRYPTO_SOFT_MD5) += soft_md5
 subdirs-$(CONFIG_DRIVER_CRYPTO_SOFT_SHA1) += soft_sha1
