Add ADXL362 low energy driver. Change in valio motion sub class.

--- a/drivers/valio/Makefile
+++ b/drivers/valio/Makefile
@@ -2,4 +2,5 @@ objs-$(CONFIG_DRIVER_PUSH_BUTTON) += push_button.o
 objs-$(CONFIG_DRIVER_MTCH6102) += mtch6102.o
 objs-$(CONFIG_DRIVER_DS3231) += ds3231.o
 objs-$(CONFIG_DRIVER_ADXL345) += adxl345.o
+objs-$(CONFIG_DRIVER_ADXL362) += adxl362.o
 
