--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -17,6 +17,15 @@
   depend CONFIG_DEVICE_I2C
 %config end
 
+%config CONFIG_DRIVER_ADXL362
+  parent CONFIG_DRIVER
+  desc Enable ADXL362 motion detector driver
+  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_SPI
+  depend CONFIG_DEVICE_SPI_REQUEST
+  depend CONFIG_DEVICE_SPI_REQUEST_TIMER
+%config end
+
 %config CONFIG_DRIVER_PUSH_BUTTON
   parent CONFIG_DRIVER
   desc Support for push button
