arch/nrf5x: Add support for PCA10005 (nRF51-DK daughterboard with SMA)

--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -2,3 +2,8 @@
   desc Support for nRF51 development kit USB dongle
   parent CONFIG_ARCH_NRF51
 %config end
+
+%config CONFIG_NRF5X_PCA10005
+  desc Support for nRF51822-DK with SMA connector
+  parent CONFIG_ARCH_NRF51
+%config end
