--- a/arch/nrf51/board/board.config
+++ b/arch/nrf51/board/board.config
@@ -3,3 +3,9 @@
   parent CONFIG_ARCH_NRF51
   depend CONFIG_NRF51_822
 %config end
+
+%config CONFIG_NRF51_PCA10005
+  desc nRF51 support for nRF51822-DK with SMA connector
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_NRF51_822
+%config end
