arch/nrf5x: Add RNG driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -238,3 +238,9 @@
   desc Enable nRF5x AES-CMAC
   parent CONFIG_DRIVER_NRF5X_AES
 %config end
+
+%config CONFIG_DRIVER_NRF5X_RNG
+  desc Enable nRF5x Thermal RNG driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_CRYPTO
+%config end
