--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -10,3 +10,4 @@ objs += nvmc.o
 objs-$(CONFIG_DRIVER_NRF5X_RAM) += ram.o
 objs-$(CONFIG_DRIVER_NRF5X_TIMER) += timer.o
 objs-$(CONFIG_DRIVER_NRF5X_AES) += aes.o
+objs-$(CONFIG_DRIVER_NRF5X_RNG) += rng.o
