arch/nrf51: Add RNG driver

--- a/arch/nrf51/drivers/Makefile
+++ b/arch/nrf51/drivers/Makefile
@@ -13,3 +13,4 @@ objs-$(CONFIG_DRIVER_NRF51_TIMER) += timer.o
 objs += clock.o
 objs-$(CONFIG_DRIVER_NRF51_BLE_RADIO) += ble_radio.o ble_radio_handler.o
 objs-$(CONFIG_DRIVER_NRF51_AES) += aes.o
+objs-$(CONFIG_DRIVER_NRF51_RNG) += rng.o
