--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -218,3 +218,9 @@
   desc Enable nRF51 Ble-specific CCM
   parent CONFIG_DRIVER_NRF51_AES
 %config end
+
+%config CONFIG_DRIVER_NRF51_RNG
+  desc Enable nRF51 Thermal RNG driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_CRYPTO
+%config end
