--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -249,23 +249,29 @@
 # Crypto
 
 %config CONFIG_DRIVER_NRF5X_AES
-  desc Enable nRF5X AES-128 driver
+  desc Enable nRF5x AES-128 driver
   parent CONFIG_ARCH_NRF5X
   depend CONFIG_DEVICE_CRYPTO
   depend CONFIG_DEVICE_DELAYED_REQUEST
 %config end
 
 %config CONFIG_DRIVER_NRF5X_AES_RANDOM
-  desc Enable nRF5X AES-128-based DRBG
+  desc Enable nRF5x AES-128-based DRBG
   parent CONFIG_DRIVER_NRF5X_AES
 %config end
 
 %config CONFIG_DRIVER_NRF5X_AES_CMAC
-  desc Enable nRF5X AES-CMAC
+  desc Enable nRF5x AES-CMAC
   parent CONFIG_DRIVER_NRF5X_AES
 %config end
 
 %config CONFIG_DRIVER_NRF5X_AES_CCM
-  desc Enable nRF5X Ble-specific CCM
+  desc Enable nRF5x Ble-specific CCM
   parent CONFIG_DRIVER_NRF5X_AES
+%config end
+
+%config CONFIG_DRIVER_NRF5X_RNG
+  desc Enable nRF5x Thermal RNG driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_CRYPTO
 %config end
