arch/nrf5x: Add support for PCA20006 (nRF51 Smart Beacon)

--- a/arch/nrf5x/board/Makefile
+++ b/arch/nrf5x/board/Makefile
@@ -2,3 +2,4 @@ objs-$(CONFIG_NRF5X_PCA10000) += pca10000.o
 objs-$(CONFIG_NRF5X_PCA10005) += pca10005.o
 objs-$(CONFIG_NRF5X_PCA10024) += pca10024.o
 objs-$(CONFIG_NRF5X_PCA20002) += pca20002.o
+objs-$(CONFIG_NRF5X_PCA20006) += pca20006.o
