--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -17,3 +17,8 @@
   desc Support for nRF51 Smart Remote module
   parent CONFIG_ARCH_NRF51
 %config end
+
+%config CONFIG_NRF5X_PCA20006
+  desc Support for nRF51 Smart Beacon
+  parent CONFIG_ARCH_NRF51
+%config end
