arch/nrf51: Add support for PCA20006 (Smart Beacon)

--- a/arch/nrf51/board/board.config
+++ b/arch/nrf51/board/board.config
@@ -21,3 +21,9 @@
   parent CONFIG_ARCH_NRF51
   depend CONFIG_NRF51_822
 %config end
+
+%config CONFIG_NRF51_PCA20006
+  desc nRF51 support for Smart Beacon
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_NRF51_822
+%config end
