Update DMA class. Add EFM32 DMA support

--- a/arch/efm32/drivers/Makefile
+++ b/arch/efm32/drivers/Makefile
@@ -8,3 +8,4 @@ subdirs-$(CONFIG_DRIVER_EFM32_RECMU) += recmu
 subdirs-$(CONFIG_DRIVER_EFM32_MSC) += msc
 subdirs-$(CONFIG_DRIVER_EFM32_AES) += aes
 subdirs-$(CONFIG_DRIVER_EFM32_PWM) += pwm
+subdirs-$(CONFIG_DRIVER_EFM32_DMA) += dma
