--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -44,6 +44,7 @@
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM3
   provide CONFIG_EFM32_FLASH_PAGE_SIZE=9
+  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
 %config end
 
 %config CONFIG_EFM32_ZERO_GECKO
@@ -51,6 +52,7 @@
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM0
   provide CONFIG_EFM32_FLASH_PAGE_SIZE=10
+  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=4
 %config end
 
 %config CONFIG_EFM32_LEOPARD_GECKO
@@ -58,6 +60,7 @@
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM3
   provide CONFIG_EFM32_FLASH_PAGE_SIZE=11
+  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
 %config end
 
 %config CONFIG_EFM32_WONDER_GECKO
@@ -65,6 +68,7 @@
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM4
   provide CONFIG_EFM32_FLASH_PAGE_SIZE=11
+  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
 %config end
 
 %config CONFIG_EFM32_GIANT_GECKO
@@ -72,6 +76,7 @@
   parent CONFIG_ARCH_EFM32
   depend CONFIG_CPU_ARM_CORTEXM3
   provide CONFIG_EFM32_FLASH_PAGE_SIZE=12
+  provide CONFIG_DRIVER_EFM32_DMA_MAX_CHANNEL_COUNT=12
 %config end
 
 %config CONFIG_EFM32_G8XX_STK
