Add DMA support for EFM32 SPI

--- a/arch/efm32/drivers/usart/usart.config
+++ b/arch/efm32/drivers/usart/usart.config
@@ -83,3 +83,9 @@
   function efm32_usart_printk_init
 %init end
 
+%config CONFIG_DRIVER_EFM32_USART_DMA_THRD
+  desc DMA will be used for transfer if size is greater than or equal to this value.
+  parent CONFIG_DRIVER_EFM32_DMA
+  flags value
+  default 2
+%config end
