arch/nrf51: Add clock driver

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -144,3 +144,32 @@
   flags value
   default 1000000
 %config end
+
+# Clock
+
+%config CONFIG_DRIVER_NRF51_CLOCK
+  desc Enable nRF51 clock driver
+  parent CONFIG_ARCH_NRF51
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_IRQ
+  flags auto
+%config end
+
+%init INIT_NRF51_CLOCK_INIT
+  parent CONFIG_ARCH_NRF51
+  during INIT_BOOTSTRAP
+  before INIT_MEMORY
+  function arch_nrf51_clock_init
+%init end
+
+%config CONFIG_DRIVER_NRF51_CLOCK_HFCLK_FREQ
+  desc nRF51 High frequency clock frequency (MHz); 0 = not present
+  parent CONFIG_ARCH_NRF51
+  flags value
+  default 0
+%config end
+
+%config CONFIG_DRIVER_NRF51_CLOCK_LFCLK_XOSC
+  desc nRF51 Low frequency clock is 32.768KHz external christal
+  parent CONFIG_ARCH_NRF51
+%config end
