arch/nrf5x: Add clock driver

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -13,3 +13,38 @@
   flags enum
   default 0
 %config end
+
+# Clock
+
+%config CONFIG_DRIVER_NRF5X_CLOCK
+  desc Enable nRF5x clock driver
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_CLOCK
+  depend CONFIG_DEVICE_IRQ
+  flags auto
+  depend CONFIG_MUTEK_KROUTINE_SCHED
+%config end
+
+%init INIT_NRF5X_CLOCK_INIT
+  parent CONFIG_ARCH_NRF5X
+  during INIT_BOOTSTRAP
+  before INIT_MEMORY
+  function arch_nrf5x_clock_init
+%init end
+
+%config CONFIG_DRIVER_NRF5X_CLOCK_USE
+  desc Allow to explicitly call device_use on clock devices
+  parent CONFIG_DEVICE_CLOCK
+%config end
+
+%config CONFIG_DRIVER_NRF5X_CLOCK_HFCLK_FREQ
+  desc nRF5x High frequency clock frequency (MHz); 0 = not present
+  parent CONFIG_ARCH_NRF5X
+  flags value
+  default 0
+%config end
+
+%config CONFIG_DRIVER_NRF5X_CLOCK_LFCLK_XOSC
+  desc nRF5x Low frequency clock is 32.768KHz external christal
+  parent CONFIG_ARCH_NRF5X
+%config end
