--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -77,3 +77,10 @@
   flags value
 %config end
 
+%config CONFIG_LIBTERMUI_CON_HISTORY
+  desc Console number of history entries
+  default 4
+  parent CONFIG_LIBTERMUI_CONSOLE
+  flags value
+%config end
+
