--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -154,6 +154,13 @@
   depend CONFIG_MUTEK_THREAD
 %config end
 
+%config CONFIG_MUTEK_SHELL_PROMPT
+  parent CONFIG_MUTEK_SHELL
+  desc Define the default shell prompt string
+  flags value
+  default "[#31;mutek#;] "
+%config end
+
 %init INIT_MUTEK_SHELL_THREAD
   parent CONFIG_MUTEK_SHELL_THREAD
   during INIT_SMP
