added CONFIG_CPU_HARDWARE_DIVMOD and CONFIG_CPU_HARDWARE_MUL

--- a/cpu/avr32/avr32.config
+++ b/cpu/avr32/avr32.config
@@ -47,6 +47,8 @@
   provide CONFIG_CPU_EXCEPTION_SIZE=0x00000104
   provide CONFIG_CPU_EXCEPTION_ALIGN=0x00000004
   exclude CONFIG_HEXO_CONTEXT_NESTED
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
 %config CONFIG_CPU_AVR32_TIMER_CYCLECOUNTER
