--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -118,6 +118,20 @@
   flags meta
 %config end
 
+%config CONFIG_CPU_HARDWARE_MUL
+  parent CONFIG_CPU
+  desc Specifies the maximum size in bits of the output values supported by the processor hardware multiplier
+  flags value maxval
+  default 0
+%config end
+
+%config CONFIG_CPU_HARDWARE_DIVMOD
+  parent CONFIG_CPU
+  desc Specifies the maximum size in bits of the input values supported by the processor hardware divider
+  flags value maxval
+  default 0
+%config end
+
 %config CONFIG_CPU_WAIT_IRQ
   parent CONFIG_CPU
   desc The processor has a wait for interrupts instruction available
