--- a/cpu/lm32/lm32.config
+++ b/cpu/lm32/lm32.config
@@ -53,12 +53,14 @@
   parent CONFIG_CPU_LM32
   desc Generate code for lm32 processor with divide instructions enabled
   when CONFIG_CPU_LM32_SOCLIB
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
 %config CONFIG_CPU_LM32_MULTIPLY
   parent CONFIG_CPU_LM32
   desc Generate code for lm32 processor with multiply instructions enabled
   when CONFIG_CPU_LM32_SOCLIB
+  provide CONFIG_CPU_HARDWARE_MUL=32
 %config end
 
 %config CONFIG_CPU_LM32_SIGN_EXTEND
