--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -14,6 +14,8 @@
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_MIPS_FPU=32
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
 %config CONFIG_CPU_MIPS32EB_SOCLIB
@@ -28,6 +30,8 @@
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_MIPS_FPU=32
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_O32
