--- a/cpu/nios2/nios.config
+++ b/cpu/nios2/nios.config
@@ -49,17 +49,20 @@
   parent CONFIG_CPU_NIOS2
   desc Generate code for Nios2 processor mul instructions
   when CONFIG_CPU_NIOS2_SOCLIB
+  provide CONFIG_CPU_HARDWARE_MUL=32
 %config end
 
 %config CONFIG_CPU_NIOS2_MULX
   parent CONFIG_CPU_NIOS2
   desc Generate code for Nios2 processor mulx instructions
+  provide CONFIG_CPU_HARDWARE_MUL=64
 %config end
 
 %config CONFIG_CPU_NIOS2_DIV
   parent CONFIG_CPU_NIOS2
   desc Generate code for Nios2 processor div instructions
   when CONFIG_CPU_NIOS2_SOCLIB
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
 %config CONFIG_CPU_NIOS2_EXEPT_BASE_CTL17
