--- a/cpu/sparc/sparc.config
+++ b/cpu/sparc/sparc.config
@@ -13,6 +13,8 @@
   provide CONFIG_COMPILE_MCPU=v8
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=64
 #  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
@@ -26,6 +28,8 @@
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_COMPILE_MCPU=v8
   provide CONFIG_CPU_SMP_CAPABLE
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=64
 %config end
 
 %config CONFIG_CPU_SPARC_LEON3_CASA
