--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -17,6 +17,8 @@
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_META
   require CONFIG_HEXO_STACK_ALIGN>=8
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=64
 
   provide CONFIG_CPU_RESET_ADDR=0x000ffff0
   provide CONFIG_CPU_RESET_SIZE=20
