--- a/cpu/x86_64-emu/emu.config
+++ b/cpu/x86_64-emu/emu.config
@@ -15,6 +15,8 @@
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_META
   provide CONFIG_HEXO_STACK_ALIGN=16
+  provide CONFIG_CPU_HARDWARE_MUL=128
+  provide CONFIG_CPU_HARDWARE_DIVMOD=128
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
