--- a/libc/libc.config
+++ b/libc/libc.config
@@ -118,6 +118,7 @@
   desc Use compiler 64 bits divide and mod operations to output decimal numbers.
   desc This will rely on processor instructions or libgcc stuff. The default is
   desc to use a shift based algorithm instead.
+  when CONFIG_CPU_HARDWARE_DIVMOD>=64
 %config end
 
 %config CONFIG_LIBC_PRINTF
