--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -11,6 +11,7 @@
   provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_NAME=arm
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
+  provide CONFIG_CPU_HARDWARE_MUL=64
 %config end
 
 %config CONFIG_CPU_ARM_7TDMI
@@ -21,6 +22,7 @@
   depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_CPU_NAME=arm7tdmi
   provide CONFIG_CPU_ARM_ARCH_VERSION=4
+  provide CONFIG_CPU_HARDWARE_MUL=64
 %config end
 
 %config CONFIG_CPU_ARM_1176
@@ -34,6 +36,7 @@
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
   provide CONFIG_CPU_NONALIGNED_ACCESS
+  provide CONFIG_CPU_HARDWARE_MUL=64
 %config end
 
 %config CONFIG_CPU_ARM_1176F
@@ -46,6 +49,7 @@
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
   provide CONFIG_CPU_NONALIGNED_ACCESS
+  provide CONFIG_CPU_HARDWARE_MUL=64
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXA8
@@ -59,6 +63,7 @@
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
   provide CONFIG_CPU_NONALIGNED_ACCESS
+  provide CONFIG_CPU_HARDWARE_MUL=64
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXA9
@@ -72,6 +77,7 @@
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
   provide CONFIG_CPU_NONALIGNED_ACCESS
+  provide CONFIG_CPU_HARDWARE_MUL=64
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXM0
@@ -82,6 +88,7 @@
   provide CONFIG_CPU_NAME=arm_cortex_m0
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
+  provide CONFIG_CPU_HARDWARE_MUL=32
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXM0PLUS
@@ -92,6 +99,7 @@
   provide CONFIG_CPU_NAME=arm_cortex_m0plus
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
+  provide CONFIG_CPU_HARDWARE_MUL=32
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXM1
@@ -102,6 +110,7 @@
   provide CONFIG_CPU_NAME=arm_cortex_m1
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
+  provide CONFIG_CPU_HARDWARE_MUL=32
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXM3
@@ -113,6 +122,8 @@
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
   provide CONFIG_CPU_NONALIGNED_ACCESS
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
 %config CONFIG_CPU_ARM_CORTEXM4
@@ -124,6 +135,8 @@
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
   provide CONFIG_CPU_NONALIGNED_ACCESS
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
 %config CONFIG_CPU_ARM_THUMB
