--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -15,6 +15,8 @@
 #  depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_CPU_NAME=ppc405
   provide CONFIG_COMPILE_MCPU=405
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=32
 %config end
 
 %config CONFIG_DRIVER_CPU_PPC
