--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -16,6 +16,8 @@
   provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_META
   provide CONFIG_HEXO_STACK_ALIGN=16
+  provide CONFIG_CPU_HARDWARE_MUL=64
+  provide CONFIG_CPU_HARDWARE_DIVMOD=64
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
