scripts: Add support for LTO

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -11,6 +11,12 @@
   default defined
 %config end
 
+%config CONFIG_COMPILE_LTO
+  flags root
+  desc Perform link-time optimization
+  exclude CONFIG_DEVICE # As long as LTO breaks with ldscript globals
+%config end
+
 %config CONFIG_COMPILE_SOFTFLOAT
   flags root
   desc Use software only floating point
