arch: Depend on CPU device when SMP

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -4,6 +4,7 @@
   parent CONFIG_ARCH
   depend CONFIG_CPU_SMP_CAPABLE
   depend CONFIG_ARCH_SMP_CAPABLE
+  depend CONFIG_DEVICE_CPU
   require CONFIG_ARCH_LAST_CPU_ID
   require CONFIG_ARCH_BOOTSTRAP_CPU_ID
   single CONFIG_LOAD_SMP_RESET_MERGED CONFIG_LOAD_SMP_RESET_SEPARATE CONFIG_LOAD_SMP_RESET_COPY CONFIG_LOAD_SMP_RESET_TEXT
