--- a/drivers/printk/printk.config
+++ b/drivers/printk/printk.config
@@ -6,8 +6,8 @@
 
 %config CONFIG_DRIVER_SEGGER_RTT_PRINTK
   desc Use segger RTT printk
-  parent CONFIG_MUTEK_PRINTK
-  depend CONFIG_DRIVER_SEGGER_RTT
+  parent CONFIG_DRIVER_SEGGER_RTT
+  depend CONFIG_MUTEK_PRINTK
   provide CONFIG_MUTEK_PRINTK_HANDLER
 %config end
 
