--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -181,11 +181,10 @@
 %config end
 
 %config CONFIG_MUTEK_PRINTK
-  desc Provide printk() for kernel messages
+  desc Enable support for the printk kernel logging family of functions
   default defined
   parent CONFIG_MUTEK
   depend CONFIG_LIBC_FORMATTER
-  depend CONFIG_MUTEK_PRINTK_HANDLER
 %config end
 
 %config CONFIG_MUTEK_PRINTK_HANDLER
@@ -214,7 +213,7 @@
 %config end
 
 %init INIT_MUTEK_PRINTK
-  parent CONFIG_MUTEK_PRINTK
+  parent CONFIG_MUTEK_PRINTK_HANDLER
   desc Setup a kernel console output as soon as data sections are setup
   during INIT_MEMORY
   after INIT_MEMORY_SECTIONS
