--- a/arch/bcm2835/Makefile
+++ b/arch/bcm2835/Makefile
@@ -1,5 +1,5 @@
 objs = arch_init.o
-objs-$(CONFIG_MUTEK_PRINTK) += early_console.o
+objs-$(CONFIG_MUTEK_PRINTK_HANDLER) += early_console.o
 
 ifeq ($(findstring RASPBERRY_,$(CONFIG_ARCH_BCM2835_BOARD)), RASPBERRY_)
 objs += dev_raspberry.o
