--- a/arch/zynq/Makefile
+++ b/arch/zynq/Makefile
@@ -1,6 +1,6 @@
 
 objs = arch_init.o
-objs-$(CONFIG_MUTEK_PRINTK) += early_console.o
+objs-$(CONFIG_MUTEK_PRINTK_HANDLER) += early_console.o
 
 meta = ldscript
 
