removed support for comments at end of line in .config files

--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -124,7 +124,8 @@
 
 %config CONFIG_HEXO_INTTYPES_DEPRECATED
   desc Mark short, int and long compiler types has deprecated because their size may vary between architectures
-  flags deprecated # replaced with -D_HEXO_INTTYPES_DEPRECATED in DIR_CFLAGS
+  # replaced with -D_HEXO_INTTYPES_DEPRECATED in DIR_CFLAGS
+  flags deprecated
   default defined
   parent CONFIG_HEXO
 %config end
