--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -102,7 +102,8 @@
   desc Initialize the spin-barrier primitive used to synchronize processors during smp startup
   condition CONFIG_ARCH_SMP
   during INIT_BOOTSTRAP
-  after INIT_DEVICE       # we need to know the number of cpus
+  # we need to know the number of cpus
+   after INIT_DEVICE
   function mutek_startup_barrier_init
 %init end
 
@@ -111,7 +112,8 @@
 %init INIT_MUTEK_FAULT_HANDLER
   parent CONFIG_MUTEK
   desc Setup a processor fault handler
-  after INIT_DEVICE_CPU_REGS  # we need cpu local variables
+  # we need cpu local variables
+   after INIT_DEVICE_CPU_REGS
   during INIT_CPUS
   function mutek_fault_initsmp
 %init end
