prevent configuration tokens with more than one parent

--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -38,7 +38,7 @@
 %config end
 
 %config CONFIG_CPU_X86_ALIGNCHECK
-  parent CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
+  parent CONFIG_CPU_X86
   desc Enable memory access alignement checking on x86 processors.
   desc Warning: gcc may generate non aligned accesses in memset.
   exclude CONFIG_CPU_NONALIGNED_ACCESS
