--- a/cpu/x86_64-emu/emu.config
+++ b/cpu/x86_64-emu/emu.config
@@ -20,3 +20,9 @@
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
+%config CONFIG_CPU_X86_64_EMU_ALIGNCHECK
+  parent CONFIG_CPU_X86_64_EMU
+  desc Enable processor memory access alignement checking
+  exclude CONFIG_CPU_NONALIGNED_ACCESS
+%config end
+
