--- a/cpu/x86-emu/emu.config
+++ b/cpu/x86-emu/emu.config
@@ -21,3 +21,9 @@
   exclude CONFIG_HEXO_CONTEXT_NESTED
 %config end
 
+%config CONFIG_CPU_X86_EMU_ALIGNCHECK
+  parent CONFIG_CPU_X86_EMU
+  desc Enable processor memory access alignement checking
+  exclude CONFIG_CPU_NONALIGNED_ACCESS
+%config end
+
