efm32: added AES based prng

--- a/arch/efm32/drivers/aes/aes.config
+++ b/arch/efm32/drivers/aes/aes.config
@@ -56,3 +56,9 @@
   flags value
 %config end
 
+%config CONFIG_DRIVER_EFM32_AES_RANDOM
+  desc Enable AES based PRNG
+  parent CONFIG_DRIVER_EFM32_AES
+  default defined
+%config end
+
