Rework DMA class API. Update drivers

--- a/arch/efm32/drivers/dma/dma.config
+++ b/arch/efm32/drivers/dma/dma.config
@@ -18,3 +18,8 @@
   parent CONFIG_DRIVER_EFM32_DMA
   flags value
 %config end
+
+%config CONFIG_DRIVER_EFM32_DMA_DOUBLE_BUFFERING
+  desc Support for EFM32 PING PONG mode
+  parent CONFIG_DRIVER_EFM32_DMA
+%config end
