--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -113,6 +113,12 @@
   desc Enable DMA devices support
 %config end
 
+%config CONFIG_DEVICE_DMA_DOUBLE_BUFFERING
+  parent CONFIG_DEVICE_DMA
+  flags auto
+  desc Enable DMA double buffering support
+%config end
+
 %config CONFIG_DEVICE_NET
   parent CONFIG_DEVICE
   flags auto
