--- a/libdevice/valio.config
+++ b/libdevice/valio.config
@@ -88,3 +88,17 @@
   provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
   default 2
 %config end
+
+%config CONFIG_DEVICE_VALIO_MOTION_SENSOR
+  desc Valio Motion Sensor class enable
+  parent CONFIG_DEVICE_VALIO
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_VALIO_MOTION_SENSOR_ATTRIBUTE_COUNT
+  desc Valio Motion Sensor class attribute count
+  parent CONFIG_DEVICE_VALIO_MOTION_SENSOR
+  flags value
+  provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
+  default 2
+%config end
