--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -67,3 +67,11 @@
   depend CONFIG_DEVICE_VALIO_KEYBOARD
   depend CONFIG_DEVICE_GPIO
 %config end
+
+%config CONFIG_DRIVER_MPU6505
+  parent CONFIG_DRIVER
+  desc Enable MPU6505 Gyro/Accelero Valio driver
+  depend CONFIG_DEVICE_VALIO_MOTION_SENSOR
+  depend CONFIG_DEVICE_TIMER
+  depend CONFIG_DEVICE_I2C
+%config end
