--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -86,6 +86,7 @@
   parent CONFIG_CPU_ARM
   provide CONFIG_COMPILE_MCPU=cortex-m0
   provide CONFIG_CPU_NAME=arm_cortex_m0
+  provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
   provide CONFIG_CPU_HARDWARE_MUL=32
@@ -97,6 +98,7 @@
   parent CONFIG_CPU_ARM
   provide CONFIG_COMPILE_MCPU=cortex-m0+
   provide CONFIG_CPU_NAME=arm_cortex_m0plus
+  provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
   provide CONFIG_CPU_HARDWARE_MUL=32
@@ -108,6 +110,7 @@
   parent CONFIG_CPU_ARM
   provide CONFIG_COMPILE_MCPU=cortex-m1
   provide CONFIG_CPU_NAME=arm_cortex_m1
+  provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
   provide CONFIG_CPU_ARM_ARCH_VERSION=6
   provide CONFIG_CPU_HARDWARE_MUL=32
@@ -120,6 +123,7 @@
   provide CONFIG_COMPILE_MCPU=cortex-m3
   provide CONFIG_CPU_NAME=arm_cortex_m3
   provide CONFIG_CPU_EXCEPTION_RELOCATABLE
+  provide CONFIG_CPU_WAIT_IRQ
   provide CONFIG_CPU_ARM_ARCH_VERSION=7
   provide CONFIG_CPU_NONALIGNED_ACCESS
   provide CONFIG_CPU_HARDWARE_MUL=64
