--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -187,6 +187,13 @@
   depend CONFIG_CPU_ARM_ARCH_PROFILE_A CONFIG_CPU_ARM_ARCH_PROFILE_M
 %config end
 
+%config CONFIG_DRIVER_CPU_ARM
+  desc Enable driver for ARM CPU
+  parent CONFIG_CPU_ARM
+  depend CONFIG_DEVICE_CPU
+  default defined
+%config end
+
 %config CONFIG_CPU_ARM_ARCH_VERSION
   desc ARM processor architecture version
   flags internal value
