fixed borken comment

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -14,7 +14,8 @@
 %config CONFIG_COMPILE_LTO
   flags root
   desc Perform link-time optimization
-  exclude CONFIG_DEVICE # As long as LTO breaks with ldscript globals
+  # As long as LTO breaks with ldscript globals
+  exclude CONFIG_DEVICE
 %config end
 
 %config CONFIG_COMPILE_SOFTFLOAT
