spi: added the CONFIG_DEVICE_SPI_REQUEST_GPIO config token

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -183,6 +183,13 @@
   desc Enable SPI device requests scheduler time handling
 %config end
 
+%config CONFIG_DEVICE_SPI_REQUEST_GPIO
+  parent CONFIG_DEVICE_SPI_REQUEST
+  depend CONFIG_DEVICE_GPIO
+  flags auto
+  desc Enable SPI device requests gpio based instructions and chip select
+%config end
+
 %config CONFIG_DEVICE_ENUM
   parent CONFIG_DEVICE
   depend CONFIG_DEVICE_TREE
