libdevice: Make delayed queue depend on interrupts

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -93,6 +93,7 @@
   desc .
   flags auto
   depend CONFIG_MUTEK_KROUTINE_SCHED_SWITCH
+  depend CONFIG_HEXO_IRQ
 %config end
 
 %config CONFIG_DEVICE_CPU
