--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -357,3 +357,8 @@
   default 16
 %config end
 
+%config CONFIG_DEVICE_PERSIST
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable persistent storage support
+%config end
