stm32: made some changes to the way platform build configuration is described, added ram/flash sizes defs for F1 and F4 families

--- a/arch/stm32/drivers/gpio/gpio.config
+++ b/arch/stm32/drivers/gpio/gpio.config
@@ -1,9 +1,22 @@
 
 %config CONFIG_DRIVER_STM32_GPIO
-  desc Driver for GPIO controller on STM32 boards.
+  desc Driver for GPIO controller on stm32
   parent CONFIG_ARCH_STM32
+  single CONFIG_DRIVER_STM32_GPIO_F1XX CONFIG_DRIVER_STM32_GPIO_F4XX
   depend CONFIG_DEVICE_GPIO
   depend CONFIG_DEVICE_IOMUX
+%config end
+
+%config CONFIG_DRIVER_STM32_GPIO_F1XX
+  desc Driver for GPIO controller on stm32 F1 family
+  parent CONFIG_DRIVER_STM32_GPIO
+  when CONFIG_STM32_FAMILY=1
+%config end
+
+%config CONFIG_DRIVER_STM32_GPIO_F4XX
+  desc Driver for GPIO controller on stm32 F4 family
+  parent CONFIG_DRIVER_STM32_GPIO
+  when CONFIG_STM32_FAMILY=4
 %config end
 
 %config CONFIG_DRIVER_STM32_GPIO_ICU
