--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -13,6 +13,11 @@
   provide CONFIG_ARCH_NAME=stm32
   exclude CONFIG_ARCH_SMP CONFIG_ARCH_CLUSTER
   provide CONFIG_DEVICE_HELPER_PREFIX=STM32
+  require CONFIG_STM32_SERIE
+  require CONFIG_STM32_FAMILY
+  require CONFIG_STM32_AHBRAMSIZE
+  require CONFIG_STM32_CPURAMSIZE
+  require CONFIG_STM32_FLASHSIZE
 %config end
 
 %init INIT_STM32_MEM_ALLOC
@@ -29,24 +34,37 @@
   function stm32_clock_init
 %init end
 
-%config CONFIG_STM32_F401
-  desc STM32 F401 microcontroller
+%config CONFIG_STM32_SERIE
   parent CONFIG_ARCH_STM32
-  flags auto
+  flags value
 %config end
 
-%config CONFIG_BOARD_STM32
-  desc STM32 board definition
+%config CONFIG_STM32_FAMILY
   parent CONFIG_ARCH_STM32
-  flags internal
-  when CONFIG_BOARD_STM32_NUCLEOF401RE
-  single CONFIG_BOARD_STM32_NUCLEOF401RE
+  flags value
+%config end
+
+%config CONFIG_STM32_AHBRAMSIZE
+  desc Size of ram accessible by CPU and AHB masters, mapped at 0x20000000
+  parent CONFIG_ARCH_STM32
+  flags value
+%config end
+
+%config CONFIG_STM32_CPURAMSIZE
+  desc Size of ram accessible by CPU only, mapped at 0x10000000
+  parent CONFIG_ARCH_STM32
+  flags value
+%config end
+
+%config CONFIG_STM32_FLASHSIZE
+  desc Size of flash memory
+  parent CONFIG_ARCH_STM32
+  flags value
 %config end
 
 %config CONFIG_BOARD_STM32_NUCLEOF401RE
   desc STM32 Nucleo STM32F401RE board
-  parent CONFIG_BOARD_STM32
-  depend CONFIG_STM32_F401
+  parent CONFIG_ARCH_STM32
   depend CONFIG_DRIVER_STM32_USART_PRINTK
 %config end
 
