arch/psoc4: Add SCB UART

--- a/arch/psoc4/drivers/drivers.config
+++ b/arch/psoc4/drivers/drivers.config
@@ -30,3 +30,11 @@
   flags value
   default 115200
 %config end
+
+# UART
+
+%config CONFIG_DRIVER_PSOC4_SCB_UART
+  desc PSoC4 SCB UART char device
+  parent CONFIG_ARCH_PSOC4
+  depend CONFIG_DEVICE_CHAR
+%config end
