stm32: fix missing desc in config

--- a/arch/stm32/stm32.config
+++ b/arch/stm32/stm32.config
@@ -35,11 +35,13 @@
 %init end
 
 %config CONFIG_STM32_SERIE
+  desc Defines the STM32 architecture series
   parent CONFIG_ARCH_STM32
   flags value
 %config end
 
 %config CONFIG_STM32_FAMILY
+  desc Defines the STM32 architecture family
   parent CONFIG_ARCH_STM32
   flags value
 %config end
