arch/nrf5x/ble_radio: Add optional debug code

--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -246,3 +246,8 @@
   desc Enable nRF5X Radio DCDC
   parent CONFIG_DRIVER_NRF5X_BLE_RADIO
 %config end
+
+%config CONFIG_DRIVER_NRF5X_BLE_RADIO_DEBUG
+  desc Enable nRF5x Radio Debug code
+  parent CONFIG_DRIVER_NRF5X_BLE_RADIO
+%config end
