arch/nrf51/ble_radio: Add optional debug code

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -189,3 +189,8 @@
   desc Enable nRF51 Radio DCDC
   parent CONFIG_DRIVER_NRF51_BLE_RADIO
 %config end
+
+%config CONFIG_DRIVER_NRF51_BLE_RADIO_DEBUG
+  desc Enable nRF51 Radio Debug code
+  parent CONFIG_DRIVER_NRF51_BLE_RADIO
+%config end
