arm: rewrite of the exception/preempt code for faster irq handling, use of FIQ register bank

--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -150,7 +150,13 @@
 %config end
 
 %config CONFIG_CPU_ARM_CUSTOM_IRQ_HANDLER
-  desc Has custom ICU-based IRQ handler, often seen in microcontrollers
+  desc Redirect the IRQ exception entry point to the user defined function arm_c_irq_handler
+  parent CONFIG_CPU_ARM
+  exclude CONFIG_HEXO_IRQ
+%config end
+
+%config CONFIG_CPU_ARM_CUSTOM_FIQ_HANDLER
+  desc Redirect the FIQ exception entry point to the user defined function arm_c_fiq_handler
   parent CONFIG_CPU_ARM
 %config end
 
