arch/nrf51/ble_radio: Use ppi allocator

--- a/arch/nrf51/drivers/drivers.config
+++ b/arch/nrf51/drivers/drivers.config
@@ -182,6 +182,7 @@
   depend CONFIG_DEVICE_BLE_RADIO
   depend CONFIG_BLE
   depend CONFIG_DEVICE_IRQ
+  depend CONFIG_DRIVER_NRF51_PPI
 %config end
 
 %config CONFIG_DRIVER_NRF51_BLE_RADIO_DCDC
