libdevice: Add enum allocator for Valio devices

--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -1,19 +1,19 @@
 %config CONFIG_DRIVER_MTCH6102
   parent CONFIG_DRIVER
   desc Enable MTCH6102 Touchpad ValIO driver
-  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_VALIO_TOUCHPAD
 %config end
 
 %config CONFIG_DRIVER_DS3231
   parent CONFIG_DRIVER
   desc Enable DS3231 Calendar Clock ValIO driver
-  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_VALIO_HWCLOCK
 %config end
 
 %config CONFIG_DRIVER_ADXL345
   parent CONFIG_DRIVER
   desc Enable ADXL345 accelerometer Valio driver
-  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_VALIO_MOTION
   depend CONFIG_DEVICE_I2C
 %config end
 
@@ -29,7 +29,7 @@
 %config CONFIG_DRIVER_PUSH_BUTTON
   parent CONFIG_DRIVER
   desc Support for push button
-  depend CONFIG_DEVICE_VALIO
+  depend CONFIG_DEVICE_VALIO_BUTTON
 %config end
 
 %config CONFIG_DRIVER_PUSH_BUTTON_TIMER
