libdevice: Remove custom driver class enum entry
Use enum allocator instead

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -1,8 +1,14 @@
-
 %config CONFIG_DEVICE
   desc MutekH device handling code
   module device
   flags auto
+%config end
+
+%config CONFIG_DEVICE_CUSTOM_CLASS_COUNT
+  desc MutekH device handling code
+  parent CONFIG_DEVICE
+  flags enum
+  default 128
 %config end
 
 %init INIT_DEVICE
