libdevice: Add keyboard valio class

--- a/libdevice/valio.config
+++ b/libdevice/valio.config
@@ -60,3 +60,17 @@
   provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
   default 2
 %config end
+
+%config CONFIG_DEVICE_VALIO_KEYBOARD
+  desc Valio Keyboard class enable
+  parent CONFIG_DEVICE_VALIO
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_VALIO_KEYBOARD_ATTRIBUTE_COUNT
+  desc Valio Keyboard class attribute count
+  parent CONFIG_DEVICE_VALIO_KEYBOARD
+  flags value
+  provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
+  default 1
+%config end
