drivers/matrix_keyboard: Add matrix keyboard driver

--- a/drivers/valio/Makefile
+++ b/drivers/valio/Makefile
@@ -3,4 +3,4 @@ objs-$(CONFIG_DRIVER_MTCH6102) += mtch6102.o
 objs-$(CONFIG_DRIVER_DS3231) += ds3231.o
 objs-$(CONFIG_DRIVER_ADXL345) += adxl345.o
 objs-$(CONFIG_DRIVER_ADXL362) += adxl362.o
-
+objs-$(CONFIG_DRIVER_MATRIX_KEYBOARD) += matrix_keyboard.o
