--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -51,3 +51,12 @@
   flags value
   default 10
 %config end
+
+%config CONFIG_DRIVER_MATRIX_KEYBOARD
+  parent CONFIG_DRIVER
+  desc Enable GPIO-backed matrix keyboard Valio driver
+  depend CONFIG_DEVICE_VALIO_KEYBOARD
+  depend CONFIG_DEVICE_GPIO
+  depend CONFIG_DEVICE_TIMER
+  depend CONFIG_MUTEK_KROUTINE_SCHED_SWITCH
+%config end
