drivers: Add button set driver
Button set is a keyboard where each button is connected to a
dedicated GPIO line.

--- a/drivers/valio/valio.config
+++ b/drivers/valio/valio.config
@@ -60,3 +60,10 @@
   depend CONFIG_DEVICE_TIMER
   depend CONFIG_MUTEK_KROUTINE_SCHED_SWITCH
 %config end
+
+%config CONFIG_DRIVER_BUTTON_SET
+  parent CONFIG_DRIVER
+  desc Enable GPIO-based set of button button keyboard Valio driver
+  depend CONFIG_DEVICE_VALIO_KEYBOARD
+  depend CONFIG_DEVICE_GPIO
+%config end
