--- a/libdevice/valio.config
+++ b/libdevice/valio.config
@@ -74,3 +74,17 @@
   provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
   default 1
 %config end
+
+%config CONFIG_DEVICE_VALIO_ADC
+  desc Valio ADC class enable
+  parent CONFIG_DEVICE_VALIO
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_VALIO_ADC_ATTRIBUTE_COUNT
+  desc Valio ADC class attribute count
+  parent CONFIG_DEVICE_VALIO_ADC
+  flags value
+  provide CONFIG_DEVICE_VALIO_ATTRIBUTE_ENUM
+  default 2
+%config end
