added CONFIG_COMPILE_FORMAT, replace TARGET_EXT make variable

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -35,6 +35,12 @@
   desc Enable compiler debug switch
 %config end
 
+%config CONFIG_COMPILE_FORMAT
+  flags value root
+  desc Define build output file format (binutils target name). The special value 'out' can be used to keep the output in native format.
+  default out
+%config end
+
 %config CONFIG_COMPILE_OPTIMIZE
   desc Set compiler optimize switch value (0, 1, 2, 3, s)
   default 2
