added CONFIG_MUTEK_DEFAULT_MEMALLOC_INIT, default memory allocator initialization code

--- a/mutek/load.config
+++ b/mutek/load.config
@@ -124,7 +124,6 @@
   single CONFIG_LOAD_EXCEPTIONS_TEXT CONFIG_LOAD_EXCEPTIONS_SEPARATE CONFIG_LOAD_EXCEPTIONS_COPY
   require CONFIG_STARTUP_STACK_ADDR
   require CONFIG_STARTUP_STACK_SIZE
-  require CONFIG_STARTUP_HEAP_ADDR
   require CONFIG_STARTUP_HEAP_SIZE
   flags harddep
 %config end
@@ -224,8 +223,8 @@
 
 %config CONFIG_STARTUP_HEAP_SIZE
   desc This specifies the size of the initial heap memory.
+  desc It can be set to 0 when CONFIG_LOAD_ROM is defined, in this case the heap is loacated after the bss section in the LOAD_ROM_RW region.
   flags value
   parent CONFIG_LOAD
-  default 4096
 %config end
 
