--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -358,6 +358,25 @@
   flags notempty
 %init end
 
+%config CONFIG_MUTEK_DEFAULT_MEMALLOC_INIT
+  desc Enable initialization of memory allocator default region on startup
+  parent CONFIG_MUTEK
+%config end
+
+%init INIT_MUTEK_DEFAULT_MEMALLOC
+  parent CONFIG_MUTEK_DEFAULT_MEMALLOC_INIT
+  desc Default initialization of memory allocator using values of CONFIG_STARTUP_HEAP_* and CONFIG_LOAD_ROM_RW_*
+  during INIT_MUTEK_MEMALLOC
+  function mutek_mem_alloc_init
+%init end
+
+%init INIT_MUTEK_STARTUP_STACK_RECLAIM
+  parent CONFIG_MUTEK_DEFAULT_MEMALLOC_INIT
+  during INIT_SMP
+  before INIT_CPUS
+  function mutek_startup_stack_reclaim
+%init end
+
 %config CONFIG_MUTEK_MEM_REGION
   desc Enable use of memory region handler.
   parent CONFIG_MUTEK
