--- a/arch/efm32/efm32.config
+++ b/arch/efm32/efm32.config
@@ -8,12 +8,6 @@
   require CONFIG_EFM32_FLASH_PAGE_SIZE
 %config end
 
-%init INIT_EFM32_MEM_ALLOC
-  parent CONFIG_ARCH_EFM32
-  during INIT_MUTEK_MEMALLOC
-  function efm32_mem_init
-%init end
-
 %config CONFIG_EFM32_FLASH_PAGE_SIZE
   desc Specify the log2 of the flash page size
   parent CONFIG_ARCH_EFM32
@@ -38,6 +32,12 @@
   before INIT_DEVICE
   function efm32_boot_button_wait
 %init end
+
+%config CONFIG_EFM32_RAMSIZE
+  desc Size of ram 0x20000000
+  parent CONFIG_ARCH_EFM32
+  flags value
+%config end
 
 %config CONFIG_EFM32_GECKO
   desc Support for EFM32 Gecko family of microcontrollers
