scheduler depends on CONFIG_DEVICE_CPU

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -257,6 +257,7 @@
   desc Hexo scheduler feature is enabled
   flags auto
   single  CONFIG_MUTEK_SCHEDULER_MIGRATION CONFIG_MUTEK_SCHEDULER_STATIC
+  depend CONFIG_DEVICE_CPU
   parent CONFIG_MUTEK
 %config end
 
