mutek: Make buffer_pool depend on slab

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -483,11 +483,13 @@
 %config CONFIG_MUTEK_SLAB
   desc Enable use of slab allocator.
   parent CONFIG_MUTEK
+  flags auto
 %config end
 
 %config CONFIG_MUTEK_BUFFER_POOL
   desc Enable use of packet pool allocator.
   parent CONFIG_MUTEK
+  depend CONFIG_MUTEK_SLAB
   flags auto
 %config end
 
