scripts: Add experimental constant merge build feature

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -30,6 +30,11 @@
   default defined
 %config end
 
+%config CONFIG_COMPILE_MERGE
+  flags root
+  desc Merge all constants
+%config end
+
 %config CONFIG_COMPILE_DEBUG
   flags root
   desc Enable compiler debug switch
