libdevice: Add ble_radio class

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -387,3 +387,9 @@
   flags auto
   desc Enable persistent storage support
 %config end
+
+%config CONFIG_DEVICE_BLE_RADIO
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable BLE radio support
+%config end
