--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -4,32 +4,13 @@
   flags auto
 %config end
 
-%config CONFIG_DEVICE_CUSTOM_CLASS_COUNT
-  desc MutekH device handling code
-  parent CONFIG_DEVICE
-  flags enum
-  default 128
-%config end
+# Initialization
 
 %init INIT_DEVICE
   parent CONFIG_DEVICE
   desc Discover and init hardware
   during INIT_BOOTSTRAP
   after INIT_MEMORY
-%init end
-
-%init INIT_DEVICE_TREE
-  parent CONFIG_DEVICE_TREE
-  desc Initialize the device tree and attach statically defined devices
-  during INIT_DEVICE
-  function device_tree_init
-%init end
-
-%init INIT_DEVICE_ENUM
-  parent CONFIG_DEVICE
-  desc Enumeration of processors and devices by arch/ specific code
-  during INIT_DEVICE
-  after INIT_DEVICE_TREE
 %init end
 
 %init INIT_DEVICE_DRIVERS 
@@ -47,12 +28,7 @@
   function libdevice_cpu_regs_initsmp
 %init end
 
-%config CONFIG_DEVICE_TREE
-  parent CONFIG_DEVICE
-  desc Enable devices to be enumerated dynamically and stored in a tree.
-  desc When this is disabled, a static device table is used instead.
-  default defined
-%config end
+# IRQ support
 
 %config CONFIG_DEVICE_IRQ
   parent CONFIG_DEVICE
@@ -88,6 +64,22 @@
   default 16
 %config end
 
+# Features
+
+%config CONFIG_DEVICE_TREE
+  parent CONFIG_DEVICE
+  desc Enable devices to be enumerated dynamically and stored in a tree.
+  desc When this is disabled, a static device table is used instead.
+  default defined
+%config end
+
+%init INIT_DEVICE_TREE
+  parent CONFIG_DEVICE_TREE
+  desc Initialize the device tree and attach statically defined devices
+  during INIT_DEVICE
+  function device_tree_init
+%init end
+
 %config CONFIG_DEVICE_ADDRESS_SPACES
   parent CONFIG_DEVICE
   desc Support platforms with multiple address spaces.
@@ -102,16 +94,66 @@
   depend CONFIG_HEXO_IRQ
 %config end
 
-%config CONFIG_DEVICE_CPU
+%config CONFIG_DEVICE_CUSTOM_CLASS_COUNT
+  desc MutekH device handling code
+  parent CONFIG_DEVICE
+  flags enum
+  default 128
+%config end
+
+%config CONFIG_DEVICE_SHELL
+  parent CONFIG_DEVICE
+  depend CONFIG_MUTEK_SHELL
+  when CONFIG_MUTEK_SHELL
+  desc Enable device related commands in the shell
+%config end
+
+%config CONFIG_DEVICE_SHELL_I2C_TRANSFER_MAX
+  parent CONFIG_DEVICE_SHELL
+  desc Define the number of maximum transfers sent from shell
+  flags value
+  default 16
+%config end
+
+# Built-in classes
+
+%config CONFIG_DEVICE_BLOCK
   parent CONFIG_DEVICE
   flags auto
-  desc Enable processors devices support
+  desc Enable block device support
 %config end
 
 %config CONFIG_DEVICE_CHAR
   parent CONFIG_DEVICE
   flags auto
   desc Enable character devices support
+%config end
+
+%config CONFIG_DEVICE_ENUM
+  parent CONFIG_DEVICE
+  depend CONFIG_DEVICE_TREE
+  flags auto
+  desc Enable enumerator device support
+%config end
+
+%init INIT_DEVICE_ENUM
+  parent CONFIG_DEVICE
+  desc Enumeration of processors and devices by arch/ specific code
+  during INIT_DEVICE
+  after INIT_DEVICE_TREE
+%init end
+
+%config CONFIG_DEVICE_FB
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable frame buffer device support
+%config end
+
+%config CONFIG_DEVICE_ICU
+  parent CONFIG_DEVICE
+  depend CONFIG_DEVICE_IRQ
+  flags auto
+  desc Enable interrupts controller device support
 %config end
 
 %config CONFIG_DEVICE_DMA
@@ -126,35 +168,16 @@
   desc Enable DMA double buffering support
 %config end
 
-%config CONFIG_DEVICE_NET
-  parent CONFIG_DEVICE
-  flags auto
-  desc Enable network adapter devices support
-%config end
-
-%config CONFIG_DEVICE_TIMER
-  parent CONFIG_DEVICE
-  flags auto
-  desc Enable timer devices support
-%config end
-
-%config CONFIG_DEVICE_ICU
-  parent CONFIG_DEVICE
-  depend CONFIG_DEVICE_IRQ
-  flags auto
-  desc Enable interrupts controller device support
-%config end
-
-%config CONFIG_DEVICE_FB
-  parent CONFIG_DEVICE
-  flags auto
-  desc Enable frame buffer device support
-%config end
-
 %config CONFIG_DEVICE_INPUT
   parent CONFIG_DEVICE
   flags auto
   desc Enable input event device support
+%config end
+
+%config CONFIG_DEVICE_NET
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable network adapter devices support
 %config end
 
 %config CONFIG_DEVICE_SOUND
@@ -163,10 +186,17 @@
   desc Enable sound device support
 %config end
 
-%config CONFIG_DEVICE_BLOCK
+%config CONFIG_DEVICE_TIMER
   parent CONFIG_DEVICE
   flags auto
-  desc Enable block device support
+  desc Enable timer devices support
+%config end
+
+%config CONFIG_DEVICE_PWM
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable PWM devices support
+  depend CONFIG_MUTEK_KROUTINE_TRIGGER
 %config end
 
 %config CONFIG_DEVICE_SPI
@@ -197,89 +227,10 @@
   desc Enable SPI device requests gpio based instructions and chip select
 %config end
 
-%config CONFIG_DEVICE_ENUM
-  parent CONFIG_DEVICE
-  depend CONFIG_DEVICE_TREE
-  flags auto
-  desc Enable enumerator device support
-%config end
-
 %config CONFIG_DEVICE_LCD
   parent CONFIG_DEVICE
   flags auto
   desc Enable LCD device support
-%config end
-
-%config CONFIG_DEVICE_GPIO
-  parent CONFIG_DEVICE
-  flags auto
-  desc Enable GPIO device support
-%config end
-
-%config CONFIG_DEVICE_GPIO_MAX_ID
-  parent CONFIG_DEVICE_GPIO
-  desc Specify the log2 of the maximum gpio pin id
-  flags value maxval
-  default 8
-%config end
-
-%config CONFIG_DEVICE_GPIO_MAX_WIDTH
-  parent CONFIG_DEVICE_GPIO
-  desc Specify the log2 of the maximum gpio pin range size
-  flags value maxval
-  default 8
-%config end
-
-%config CONFIG_DEVICE_I2C
-  parent CONFIG_DEVICE
-  flags auto
-  desc Enable I2C device support
-%config end
-
-%config CONFIG_DEVICE_VALIO
-  parent CONFIG_DEVICE
-  flags auto
-  desc Enable attribute devices support
-%config end
-
-%config CONFIG_DEVICE_MEM
-  parent CONFIG_DEVICE
-  flags auto
-  desc Enable memory device support
-%config end
-
-%config CONFIG_DEVICE_IOMUX
-  parent CONFIG_DEVICE
-  flags auto
-  desc Enable IO pin muxing support
-%config end
-
-%config CONFIG_DEVICE_IOMUX_MAX_DEMUX
-  parent CONFIG_DEVICE_IOMUX
-  desc Specify the log2 of the maximum IO demux selector value
-  flags value maxval
-  default 5
-%config end
-
-%config CONFIG_DEVICE_IOMUX_MAX_ID
-  parent CONFIG_DEVICE_IOMUX
-  desc Specify the log2 of the maximum IO id
-  flags value maxval
-  default 10
-%config end
-
-%config CONFIG_DEVICE_IOMUX_MAX_MUX
-  parent CONFIG_DEVICE_IOMUX
-  desc Specify the log2 of the maximum IO mux selector value
-  flags value maxval
-  default 5
-%config end
-
-%config CONFIG_DEVICE_IOMUX_MAX_CONFIG
-  parent CONFIG_DEVICE_IOMUX
-  desc Specify the number of bits of the IO controller specific configuration value
-  flags value maxval
-  default 12
 %config end
 
 %config CONFIG_DEVICE_CLOCK
@@ -287,7 +238,6 @@
   flags auto
   desc Enable clock management support
 %config end
-
 
 %config CONFIG_DEVICE_CLOCK_MAX_ID
   parent CONFIG_DEVICE_CLOCK
@@ -324,6 +274,59 @@
   default 4
 %config end
 
+%config CONFIG_DEVICE_GPIO
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable GPIO device support
+%config end
+
+%config CONFIG_DEVICE_GPIO_MAX_ID
+  parent CONFIG_DEVICE_GPIO
+  desc Specify the log2 of the maximum gpio pin id
+  flags value maxval
+  default 8
+%config end
+
+%config CONFIG_DEVICE_GPIO_MAX_WIDTH
+  parent CONFIG_DEVICE_GPIO
+  desc Specify the log2 of the maximum gpio pin range size
+  flags value maxval
+  default 8
+%config end
+
+%config CONFIG_DEVICE_IOMUX
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable IO pin muxing support
+%config end
+
+%config CONFIG_DEVICE_IOMUX_MAX_DEMUX
+  parent CONFIG_DEVICE_IOMUX
+  desc Specify the log2 of the maximum IO demux selector value
+  flags value maxval
+  default 5
+%config end
+
+%config CONFIG_DEVICE_IOMUX_MAX_ID
+  parent CONFIG_DEVICE_IOMUX
+  desc Specify the log2 of the maximum IO id
+  flags value maxval
+  default 10
+%config end
+
+%config CONFIG_DEVICE_IOMUX_MAX_MUX
+  parent CONFIG_DEVICE_IOMUX
+  desc Specify the log2 of the maximum IO mux selector value
+  flags value maxval
+  default 5
+%config end
+
+%config CONFIG_DEVICE_IOMUX_MAX_CONFIG
+  parent CONFIG_DEVICE_IOMUX
+  desc Specify the number of bits of the IO controller specific configuration value
+  flags value maxval
+  default 12
+%config end
 
 %config CONFIG_DEVICE_UART
   parent CONFIG_DEVICE
@@ -331,11 +334,16 @@
   desc Enable UART device support
 %config end
 
-%config CONFIG_DEVICE_PWM
+%config CONFIG_DEVICE_I2C
   parent CONFIG_DEVICE
   flags auto
-  desc Enable PWM devices support
-  depend CONFIG_MUTEK_KROUTINE_TRIGGER
+  desc Enable I2C device support
+%config end
+
+%config CONFIG_DEVICE_MEM
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable memory device support
 %config end
 
 %config CONFIG_DEVICE_RFPACKET
@@ -344,24 +352,22 @@
   desc Enable packet based RF transceiver devices support
 %config end
 
-%config CONFIG_DEVICE_SHELL
-  parent CONFIG_DEVICE
-  depend CONFIG_MUTEK_SHELL
-  when CONFIG_MUTEK_SHELL
-  desc Enable device related commands in the shell
-%config end
-
 %config CONFIG_DEVICE_CRYPTO
   parent CONFIG_DEVICE
   flags auto
   desc Enable crypto devices support
 %config end
 
-%config CONFIG_DEVICE_SHELL_I2C_TRANSFER_MAX
-  parent CONFIG_DEVICE_SHELL
-  desc Define the number of maximum transfers sent from shell
-  flags value
-  default 16
+%config CONFIG_DEVICE_CPU
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable processors devices support
+%config end
+
+%config CONFIG_DEVICE_VALIO
+  parent CONFIG_DEVICE
+  flags auto
+  desc Enable attribute devices support
 %config end
 
 %config CONFIG_DEVICE_PERSIST
