--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -115,6 +115,12 @@
   default 16
 %config end
 
+%config CONFIG_DEVICE_DRIVER_DESC
+  desc Include description field in driver
+  parent CONFIG_DEVICE
+  default defined
+%config end
+
 # Built-in classes
 
 %config CONFIG_DEVICE_BLOCK
