libdevice: Make driver cleanup code optional

--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -121,6 +121,12 @@
   default defined
 %config end
 
+%config CONFIG_DEVICE_DRIVER_CLEANUP
+  desc Include cleanup function in driver
+  parent CONFIG_DEVICE
+  default defined
+%config end
+
 # Built-in classes
 
 %config CONFIG_DEVICE_BLOCK
