arch/nrf5x: Add UARTE driver (nRF52 only)

--- a/arch/nrf5x/drivers/Makefile
+++ b/arch/nrf5x/drivers/Makefile
@@ -2,6 +2,7 @@ objs += clock.o
 objs-$(CONFIG_DRIVER_NRF5X_GPIO) += gpio.o
 objs-$(CONFIG_DRIVER_NRF5X_GPIO_PWM) += gpio_pwm.o
 objs-$(CONFIG_DRIVER_NRF5X_UART) += uart.o
+objs-$(CONFIG_DRIVER_NRF52_UARTE) += uarte.o
 objs-$(CONFIG_DRIVER_NRF5X_PRINTK) += printk.o
 objs-$(CONFIG_DRIVER_NRF5X_SPI) += spi.o
 objs-$(CONFIG_DRIVER_NRF52_SPIM) += spim.o
