--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -235,6 +235,16 @@
   default 1000000
 %config end
 
+# UARTE
+
+%config CONFIG_DRIVER_NRF52_UARTE
+  desc Enable nRF52 UARTE driver (UART with DMA)
+  parent CONFIG_ARCH_NRF52
+  depend CONFIG_DEVICE_IOMUX
+  depend CONFIG_DEVICE_CHAR
+  depend CONFIG_DEVICE_IRQ
+%config end
+
 # Crypto
 
 %config CONFIG_DRIVER_NRF5X_AES
