arch/nrf5x: Add nRF52 support

--- a/arch/nrf5x/nrf5x.config
+++ b/arch/nrf5x/nrf5x.config
@@ -12,8 +12,20 @@
   depend CONFIG_CPU_ARM32M_CORTEXM0
 %config end
 
+%config CONFIG_ARCH_NRF52
+  desc Nordic nRF52 Series
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_CPU_ARM32M_CORTEXM4
+%config end
+
 %config CONFIG_NRF5X_RAMSIZE
   desc nRF5x RAM size
   parent CONFIG_ARCH_NRF5X
   flags value
 %config end
+
+%init INIT_NRF52
+  parent CONFIG_ARCH_NRF52
+  during INIT_BOOTSTRAP
+  function nrf52_init
+%init end
