arch/nrf5x: Add support for PCA10036 (nRF52 Preview DK)

--- a/arch/nrf5x/board/board.config
+++ b/arch/nrf5x/board/board.config
@@ -22,3 +22,8 @@
   desc Support for nRF51 Smart Beacon
   parent CONFIG_ARCH_NRF51
 %config end
+
+%config CONFIG_NRF5X_PCA10036
+  desc Support for nRF52832 Preview Development Kit
+  parent CONFIG_ARCH_NRF52
+%config end
