driver: Add SWO printk driver (experimental)

--- a/drivers/printk/Makefile
+++ b/drivers/printk/Makefile
@@ -1,2 +1,3 @@
 objs-$(CONFIG_DRIVER_RTT_PRINTK) += rtt_printk.o
 objs-$(CONFIG_DRIVER_CONSOLE_PRINTK) += console.o
+objs-$(CONFIG_DRIVER_SWO_PRINTK) += swo.o
