--- a/drivers/printk/printk.config
+++ b/drivers/printk/printk.config
@@ -49,3 +49,15 @@
   during INIT_MUTEK_PRINTK
   function console_printk_init
 %init end
+
+%config CONFIG_DRIVER_SWO_PRINTK
+  desc Use ARM SWO printk
+  parent CONFIG_DRIVER
+  provide CONFIG_MUTEK_PRINTK_HANDLER
+%config end
+
+%init INIT_DRIVER_SWO_PRINTK
+  parent CONFIG_DRIVER_SWO_PRINTK
+  during INIT_MUTEK_PRINTK
+  function swo_printk_init
+%init end
