arch/nrf5x: Add nRF52 SWO support

--- a/arch/nrf5x/nrf5x.config
+++ b/arch/nrf5x/nrf5x.config
@@ -24,6 +24,12 @@
   flags value
 %config end
 
+%config CONFIG_NRF52_SWO
+  desc nRF52 SWO configuration
+  parent CONFIG_ARCH_NRF5X
+  when CONFIG_DRIVER_SWO_PRINTK
+%config end
+
 %init INIT_NRF52
   parent CONFIG_ARCH_NRF52
   during INIT_BOOTSTRAP
