--- a/arch/nrf5x/drivers/drivers.config
+++ b/arch/nrf5x/drivers/drivers.config
@@ -115,6 +115,27 @@
   default CONFIG_DRIVER_NRF5X_GPIO_PWM_CHANNEL_COUNT*2
 %config end
 
+# Memory controller
+
+%config CONFIG_DRIVER_NRF5X_NVMC
+  desc Enable nRF5x Non volatile memory controller
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_MEM
+%config end
+
+%config CONFIG_DRIVER_NRF5X_PERSIST
+  desc Enable nRF5x Persistant storage controller
+  parent CONFIG_ARCH_NRF5X
+  depend CONFIG_DEVICE_DELAYED_REQUEST
+  depend CONFIG_DEVICE_PERSIST
+%config end
+
+%config CONFIG_DRIVER_NRF5X_PERSIST_SIZE
+  desc Persistant storage size
+  parent CONFIG_DRIVER_NRF5X_PERSIST
+  flags value
+%config end
+
 # I2C
 
 %config CONFIG_DRIVER_NRF5X_I2C
