device: irq rewrite

--- a/arch/efm32/drivers/gpio/gpio.config
+++ b/arch/efm32/drivers/gpio/gpio.config
@@ -12,6 +12,8 @@
   depend CONFIG_DEVICE_IRQ
   depend CONFIG_DEVICE_ICU
   default defined
+  require CONFIG_DRIVER_EFM32_GPIO_IRQ_COUNT<=16
+  require CONFIG_DRIVER_EFM32_GPIO_IRQ_COUNT>0
 %config end
 
 %config CONFIG_DRIVER_EFM32_GPIO_IRQ_COUNT
