--- a/libdevice/device.config
+++ b/libdevice/device.config
@@ -43,6 +43,25 @@
   flags auto
 %config end
 
+%config CONFIG_DEVICE_IRQ_SHARING
+  parent CONFIG_DEVICE_IRQ
+  desc Enable linking multiple irq src end-points to a single sink end-point.
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_IRQ_MULTI_SINK
+  parent CONFIG_DEVICE_IRQ
+  desc Enable linking a single src end-point to multiple sink end-points.
+  flags auto
+%config end
+
+%config CONFIG_DEVICE_IRQ_MAX_ROUTES
+  parent CONFIG_DEVICE_IRQ
+  desc Specify the width of the irq routing bit mask
+  flags value maxval
+  default 8
+%config end
+
 %config CONFIG_DEVICE_IRQ_MAX_OUTPUT_ID
   parent CONFIG_DEVICE_IRQ
   desc Specify the log2 of the maximum output id of an irq link
