stm32: fix board file naming

--- a/arch/stm32/Makefile
+++ b/arch/stm32/Makefile
@@ -1,5 +1,5 @@
 
-objs-$(CONFIG_BOARD_STM32_NUCLEOF401RE) += boards/nucleo_f401re.o
+objs-$(CONFIG_BOARD_STM32_NUCLEOF401RE) += boards/nucleo-f401re.o
 
 meta = ldscript
 
